tests/regression/errors/bounds_check_errors.ctp

def (main:
    v = [0, 1, 2]
    v[3]
)
    